--- a/uber_analysis.ipynb
+++ b/uber_analysis.ipynb
@@ -41,7 +41,7 @@
         "id": "f2a4d106-7ad1-4d17-9775-899cb3acd03d"
       },
       "source": [
-        "IMPORTING LIBRARIES"
+        "## IMPORTING LIBRARIES"
       ]
     },
     {
@@ -66,7 +66,7 @@
         "id": "ece51016-eec6-4bc0-b8da-7a915d6316a9"
       },
       "source": [
-        "READING THE DATASET"
+        "## READING THE DATASET"
       ]
     },
     {
@@ -88,7 +88,7 @@
         "id": "cdc49be8-fc97-45ec-bf9e-4f707104f3fc"
       },
       "source": [
-        "PREVIEWING THE DATASET"
+        "## PREVIEWING THE DATASET"
       ]
     },
     {
@@ -366,7 +366,7 @@
         "id": "9630dd19-da9d-49d5-91f0-2f81fcc38dc5"
       },
       "source": [
-        "DATA CLEANING"
+        "## DATA CLEANING"
       ]
     },
     {
@@ -729,8 +729,18 @@
         "id": "8ec500d0-4239-4d5b-8119-e4c31485cc0e"
       },
       "source": [
-        "EXPLORATION AND ANALYSIS"
+        "## EXPLORATION AND ANALYSIS"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### CATEGORY ANALYSIS"
+      ],
+      "metadata": {
+        "id": "8I54KrMbr5-R"
+      },
+      "id": "8I54KrMbr5-R"
     },
     {
       "cell_type": "code",
