--- a/uber_analysis.ipynb
+++ b/uber_analysis.ipynb
@@ -1355,6 +1355,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "It was obvious that the number of rides for weekdays will be higher than the number of rides on weekends."
+      ],
+      "metadata": {
+        "id": "yW5-QIcANZWi"
+      },
+      "id": "yW5-QIcANZWi"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "5ee49912-aa1e-40d0-abf7-a817a6d27ae0",
@@ -1398,6 +1408,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "During weekdays, there is a noticeable surge in the number of rides starting at 6:00 AM, indicating the peak of morning commuting hours when people are likely heading to work. This trend continues until around 12:00 PM. Another significant increase in rides occurs from 12:00 PM to 2:00 PM, possibly reflecting lunchtime or midday activities. There's a subsequent rise in rides starting around 6:00 PM, suggesting the evening rush hour as individuals leave work. However, the number of rides starts to decrease after 8:00 PM, indicating a decline in activity during late evening hours. This pattern aligns with typical workday commuting behaviors."
+      ],
+      "metadata": {
+        "id": "mGbM922_ZPh4"
+      },
+      "id": "mGbM922_ZPh4"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "190059ff-efea-49cd-a078-b8c6aacfa54e",
@@ -1433,6 +1453,16 @@
         "plt.legend()\n",
         "plt.show()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "During weekends, there is a consistent low number of rides recorded, indicating a slower pace of activity compared to weekdays. The initial increase in rides around 11:00 suggests a gradual start to the day, possibly after leisurely mornings. A more significant rise in rides occurs around 13:00, possibly indicating the beginning of afternoon activities or outings. The decline in rides around 20:00 suggests a decrease in evening activities, and the subsequent increase around 22:00 might indicate a late-night resurgence in rides. Overall, the weekend pattern contrasts with weekdays, emphasizing a more relaxed and varied schedule with a distinct absence of the typical work-related commuting peaks."
+      ],
+      "metadata": {
+        "id": "-kFhYNlSa4Ht"
+      },
+      "id": "-kFhYNlSa4Ht"
     },
     {
       "cell_type": "code",
