--- a/uber_analysis.ipynb
+++ b/uber_analysis.ipynb
@@ -854,7 +854,7 @@
       "source": [
         "The distribution of rides by purpose, as depicted in the above diagram, reveals that the majority of rides serve the purpose of meetings, followed by Meal/Entertain, Errands/Supply, Customer Visit, Temporal Site, Between Offices, Moving, and Airport/Travel. Charity and Commute have the least frequency.\n",
         "\n",
-        "The observed distribution of rides by purpose suggests that business-related activities, such as meetings and meal/entertainment engagements, dominate the usage of rides. This insight could influence resource allocation, such as optimizing transportation services during peak meeting hours. Additionally, considering the lower frequency of rides for purposes like charity and commute, there might be an opportunity to encourage and facilitate ridesharing initiatives for these purposes to enhance efficiency and environmental sustainability. Regularly assessing and adjusting service offerings based on the predominant purposes could lead to a more tailored and efficient transportation service."
+        "The observed distribution of rides by purpose suggests that business-related activities, such as meetings and meal/entertainment engagements, dominate the usage of rides. This insight could influence resource allocation, such as optimizing transportation services during peak meeting hours. Additionally, considering the lower frequency of rides for purposes like charity and commute, there might be an opportunity to encourage and facilitate ridesharing initiatives for these purposes to enhance efficiency and environmental sustainability. Regularly assessing and adjusting service offerings based on the predominant purposes could lead to a more tailored and efficient transportation service.\n"
       ],
       "metadata": {
         "id": "P2e2j5v0uxuK"
@@ -910,7 +910,7 @@
         "The chart above explores the distribution of ride categories by purpose. It reveals that only the purposes of moving, commute, and charity fall under the personal category, while the rest are categorized as business. This classification provides valuable insights into the nature of trips, indicating a clear separation between personal and business-related purposes.\n",
         "\n",
         "\n",
-        "This observation implies a predominant association of the rides with business-related purposes as already explained, as evidenced by the overwhelming majority categorized as such. The limited representation of personal purposes in the provided data suggests a focus on professional activities. To capitalize on this trend, recommendations include optimizing services for business travelers, offering corporate packages, and tailoring marketing efforts towards professionals. Additionally, considering the potential demand for personal rides, exploring strategies to attract and cater to this segment could open up new market opportunities and diversify the user base. Regular feedback collection from users in both categories can provide insights for continuous improvement and customization of services."
+        "This observation implies a predominant association of the rides with business-related purposes as already explained, as evidenced by the overwhelming majority categorized as such. The limited representation of personal purposes in the provided data suggests a focus on professional activities. To capitalize on this trend, recommendations include optimizing services for business travelers, offering corporate packages, and tailoring marketing efforts towards professionals. Additionally, considering the potential demand for personal rides, exploring strategies to attract and cater to this segment could open up new market opportunities and diversify the user base. Regular feedback collection from users in both categories can provide insights for continuous improvement and customization of services.\n"
       ],
       "metadata": {
         "id": "CsEVflCCxUXy"
@@ -1020,7 +1020,7 @@
       "source": [
         "The chart illustrates fluctuations in the number of rides throughout the year. Notably, there was a surge from the first to the fifth week, followed by a slight decline in week 6. Subsequently, rides increased until the 9th week, experiencing a gradual decrease in week 10. The downward trend continued until week 13, with a minor upturn in week 14 before dropping in week 15, nearly equaling the count in the first week. A sharp rise occurred from week 15 to 18, abruptly dropping in week 19. A slight increase transpired in week 22, reaching the peak in week 23, followed by a sudden decline. The subsequent weeks, starting from 24, witnessed a gradual increase until week 31, which marked the lowest ride count. Weeks 31 to 32 showed a slight rise, with a minor dip in week 41. Weeks 41 to 45 exhibited a gradual increase, followed by a slight decrease from 45 to 48. The period from 48 to 49 saw a gradual rise, while rides decreased from week 49 to week 50.\n",
         "\n",
-        "The observed patterns in ride distribution throughout the year suggest varying demand trends. Peaks and troughs indicate periods of increased or decreased ride requests, potentially influenced by external factors such as seasons, holidays, or local events. Understanding these fluctuations can help optimize resource allocation and improve service efficiency. Recommendations include implementing targeted marketing or promotions during peak periods to capitalize on increased demand. Additionally, optimizing staffing levels during expected high-demand periods and strategizing for lulls can enhance operational efficiency. Regularly analyzing and adapting to these trends will contribute to better service planning and customer satisfaction"
+        "The observed patterns in ride distribution throughout the year suggest varying demand trends. Peaks and troughs indicate periods of increased or decreased ride requests, potentially influenced by external factors such as seasons, holidays, or local events. Understanding these fluctuations can help optimize resource allocation and improve service efficiency. Recommendations include implementing targeted marketing or promotions during peak periods to capitalize on increased demand. Additionally, optimizing staffing levels during expected high-demand periods and strategizing for lulls can enhance operational efficiency. Regularly analyzing and adapting to these trends will contribute to better service planning and customer satisfaction\n"
       ],
       "metadata": {
         "id": "IagWYFVi6Cxp"
@@ -1030,7 +1030,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The overall trend indicates that the majority of rides occur between 12:00 and 18:00, with the highest peak observed at 20:00. Conversely, the periods between 1:00 to 2:00 and 5:00 to 6:00 experience the least ride activity. Notably, there are no recorded rides at 4:00. This information can guide operational decisions, such as optimizing driver availability during peak hours and potentially offering incentives for drivers during periods of lower demand. Adjusting marketing strategies and service promotions to align with these peak and off-peak hours can enhance the efficiency of the ride-sharing service."
+        "The overall trend indicates that the majority of rides occur between 12:00 and 18:00, with the highest peak observed at 20:00. Conversely, the periods between 1:00 to 2:00 and 5:00 to 6:00 experience the least ride activity. Notably, there are no recorded rides at 4:00. This information can guide operational decisions, such as optimizing driver availability during peak hours and potentially offering incentives for drivers during periods of lower demand. Adjusting marketing strategies and service promotions to align with these peak and off-peak hours can enhance the efficiency of the ride-sharing service.\n"
       ],
       "metadata": {
         "id": "Cz05PfegIjYE"
@@ -1134,7 +1134,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The analysis of ride frequency by month reveals that December has the highest number of rides, followed by February, June, March, November, January, April, May, and July. Notably, October and August have fewer rides, and there were no recorded rides for September. The presence of null values in September may have led to the exclusion of data for that month. Understanding these monthly patterns can inform business strategies, allowing for targeted promotions or incentives during months with lower ride activity and ensuring preparedness for increased demand during peak months like December."
+        "The analysis of ride frequency by month reveals that December has the highest number of rides, followed by February, June, March, November, January, April, May, and July. Notably, October and August have fewer rides, and there were no recorded rides for September. The presence of null values in September may have led to the exclusion of data for that month. Understanding these monthly patterns can inform business strategies, allowing for targeted promotions or incentives during months with lower ride activity and ensuring preparedness for increased demand during peak months like December.\n"
       ],
       "metadata": {
         "id": "0wgTqF6hJoFm"
@@ -1297,7 +1297,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The overall trend indicates that the majority of rides occur between 12:00 and 18:00, with the highest peak observed at 20:00. Conversely, the periods between 1:00 to 2:00 and 5:00 to 6:00 experience the least ride activity. Notably, there are no recorded rides at 4:00. This information can guide operational decisions, such as optimizing driver availability during peak hours and potentially offering incentives for drivers during periods of lower demand. Adjusting marketing strategies and service promotions to align with these peak and off-peak hours can enhance the efficiency of the ride-sharing service."
+        "The overall trend indicates that the majority of rides occur between 12:00 and 18:00, with the highest peak observed at 20:00. Conversely, the periods between 1:00 to 2:00 and 5:00 to 6:00 experience the least ride activity. Notably, there are no recorded rides at 4:00. This information can guide operational decisions, such as optimizing driver availability during peak hours and potentially offering incentives for drivers during periods of lower demand. Adjusting marketing strategies and service promotions to align with these peak and off-peak hours can enhance the efficiency of the ride-sharing service.\n"
       ],
       "metadata": {
         "id": "zegtYEhZMpdZ"
@@ -1357,7 +1357,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "It was obvious that the number of rides for weekdays will be higher than the number of rides on weekends."
+        "It was obvious that the number of rides for weekdays will be higher than the number of rides on weekends.\n"
       ],
       "metadata": {
         "id": "yW5-QIcANZWi"
@@ -1410,7 +1410,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "During weekdays, there is a noticeable surge in the number of rides starting at 6:00 AM, indicating the peak of morning commuting hours when people are likely heading to work. This trend continues until around 12:00 PM. Another significant increase in rides occurs from 12:00 PM to 2:00 PM, possibly reflecting lunchtime or midday activities. There's a subsequent rise in rides starting around 6:00 PM, suggesting the evening rush hour as individuals leave work. However, the number of rides starts to decrease after 8:00 PM, indicating a decline in activity during late evening hours. This pattern aligns with typical workday commuting behaviors."
+        "During weekdays, there is a noticeable surge in the number of rides starting at 6:00 AM, indicating the peak of morning commuting hours when people are likely heading to work. This trend continues until around 12:00 PM. Another significant increase in rides occurs from 12:00 PM to 2:00 PM, possibly reflecting lunchtime or midday activities. There's a subsequent rise in rides starting around 6:00 PM, suggesting the evening rush hour as individuals leave work. However, the number of rides starts to decrease after 8:00 PM, indicating a decline in activity during late evening hours. This pattern aligns with typical workday commuting behaviors.\n"
       ],
       "metadata": {
         "id": "mGbM922_ZPh4"
@@ -1457,7 +1457,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "During weekends, there is a consistent low number of rides recorded, indicating a slower pace of activity compared to weekdays. The initial increase in rides around 11:00 suggests a gradual start to the day, possibly after leisurely mornings. A more significant rise in rides occurs around 13:00, possibly indicating the beginning of afternoon activities or outings. The decline in rides around 20:00 suggests a decrease in evening activities, and the subsequent increase around 22:00 might indicate a late-night resurgence in rides. Overall, the weekend pattern contrasts with weekdays, emphasizing a more relaxed and varied schedule with a distinct absence of the typical work-related commuting peaks."
+        "During weekends, there is a consistent low number of rides recorded, indicating a slower pace of activity compared to weekdays. The initial increase in rides around 11:00 suggests a gradual start to the day, possibly after leisurely mornings. A more significant rise in rides occurs around 13:00, possibly indicating the beginning of afternoon activities or outings. The decline in rides around 20:00 suggests a decrease in evening activities, and the subsequent increase around 22:00 might indicate a late-night resurgence in rides. Overall, the weekend pattern contrasts with weekdays, emphasizing a more relaxed and varied schedule with a distinct absence of the typical work-related commuting peaks.\n"
       ],
       "metadata": {
         "id": "-kFhYNlSa4Ht"
@@ -1548,14 +1548,15 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "4e05f995-ae71-4c66-9cb4-d05b67b2e5c8",
+      "cell_type": "markdown",
+      "source": [
+        "## INFERENCE\n",
+        "Based on the observations, the analysis highlights distinct patterns in ride activity during weekdays and weekends, indicating a shift in user behavior. Weekdays witness a surge in rides during morning and evening commuting hours, aligning with typical workday schedules. In contrast, weekends show a consistent but lower ride activity, suggesting a more relaxed and varied schedule. The monthly analysis identifies December as the peak period for rides, potentially influenced by holiday festivities. The time-of-day analysis reveals peak ride times between 12:00 and 18:00, with the highest peak at 20:00, guiding operational decisions for driver availability and marketing strategies. The analysis of ride purposes emphasizes a strong association with business-related activities, opening opportunities for tailored services and corporate partnerships. Overall, recommendations include optimizing services during peak periods, targeted promotions, and adapting strategies based on observed trends for improved operational efficiency and customer satisfaction."
+      ],
       "metadata": {
-        "id": "4e05f995-ae71-4c66-9cb4-d05b67b2e5c8"
+        "id": "jzCGE5qedbA0"
       },
-      "outputs": [],
-      "source": []
+      "id": "jzCGE5qedbA0"
     }
   ],
   "metadata": {
